--- a/19July2022/Cw.html
+++ b/19July2022/Cw.html
@@ -8,11 +8,12 @@
 
     <style>
         body{
-            background:linear-gradient(
+            /* background:linear-gradient(
                 to top,
                 red,
                 rgba(204,229,255,0.4)
-            );
+            ); */
+            background: linear-gradient( red,yellow);
             text-align: center;
             font-size: 1.15em;
             background-attachment: fixed;
