--- a/1Aug2022/1Aug2022.html
+++ b/1Aug2022/1Aug2022.html
@@ -16,8 +16,19 @@
         // alert("Hello alert");
         var price1 =5;
         var price2=8;
+        var n1="john";
+        var n2="Sharma";
+        var n3=Number("5");
+        var n4=4;
+        let person1={
+            firstname:"John",
+            lastname:"Sharma",
+            age:30,
+            eyeColor:"brown",
+        };
+        document.getElementById("p1").innerHTML=person1.firstname+" "+person1.lastname+" & Age is "+person1.age;
         var total=price1+price2;
-        document.getElementById("p1").innerHTML="Total is "+total;
+        // document.getElementById("p1").innerHTML=n3+n4;
         </script>
 </body>
 </html>
