--- a/2Aug2022/File.html
+++ b/2Aug2022/File.html
@@ -9,14 +9,32 @@
 <script>
     function myfun(){
         let n1=document.getElementById("n1").value;
-        let k=false;
-        if(n1==null || n1=="" || n1==" ") alert("did not write anything");
-        else document.getElementById("p1").innerHTML=n1;
+        let n2=document.getElementById("n2").value;
+        n1=Number(n1);
+        n2=Number(n2);
+        if(n1<n2){
+            alert("Number of player must be less than balls.");
+        }
+        else{
+            document.getElementById("p1").innerHTML="Number of Balls each player will get : "+parseInt(n1/n2);
+            document.getElementById("p2").innerHTML="Number of Balls left : "+n1%n2;
+        }
+        // if(!isNaN(n1) && !isNaN(n2)){
+        //     document.getElementById("p1").innerHTML=n1+n2;
+        // }else{
+        //     document.getElementById("p1").innerHTML="<span style='color:red'>Entered value is not a number</span>";
+        // }
+        // document.getElementById("p1").innerHTML=n1+n2;
+        // let k=false;
+        // if(n1==null || n1=="" || n1==" ") document.getElementById("p1").innerHTML="<span style='color:red'>Did not write anything</span>";
+        // else document.getElementById("p1").innerHTML=n1;
     }
 </script>
 <body>
-    <input type="text" name="n1" id="n1">
+    <input type="text" name="n1" id="n1" placeholder="Enter Number of Balls">
+    <input type="text" name="n2" id="n2" placeholder="Enter Number of players">
     <button onclick="myfun()">Click</button>
     <p id="p1"></p>
+    <p id="p2"></p>
 </body>
 </html>
