--- a/Projects/Project2.html
+++ b/Projects/Project2.html
@@ -59,7 +59,7 @@
                     // console.log(a);
                     count+=1;
                 }
-                if(count<5){
+                if(count<5 || count>5){
                     alert("Number must contain 5 digits");
                 }
                 else{
