--- a/Projects/Project2.html
+++ b/Projects/Project2.html
@@ -29,9 +29,12 @@
         }
         div{
             background-color: rgb(5, 5, 119);
+            width:1px;
+            height: 1px;
             align-items: center;
             display: flex;
             margin: 0% 48%;
+            transition:all 4s ease;
         }
         h1{
             margin: 5% 0% 1% 0%;
